Thu Jun 17 16:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTextContainer.m: New by jagapen@whitewater.chem.wisc.edu
	* Headers/AppKit/NSTextContainer.h: rewrite by jagapen
	* Source/GNUmakefile: Modified to build NSTextContainer and
	NSTextStorage.

1999-06-16  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/DPSOperators.h: New functions
	defineuserobject, execuserobject, and undefineuserobject for
	dealing with gstates.
	* Headers/gnustep/gui/GSMethodTable.h: Likewise.
	* Headers/gnustep/gui/NSGraphicsContext.h. Likewise.
	* Headers/gnustep/gui/PSOperators.h: Likewise.
	* Headers/gnustep/gui/GSWraps.h: Wrapper functions for PostScript
	functionality.

	* Source/NSAffineTransform.m (-concat): Implement.
	(-set): Likewise.
	
	* Headers/gnustep/gui/NSView.h: New gstate ivars.
	* Source/NSGraphicsContext.m: Move lockFocus code to NSView.
	* Source/NSView.m (-lockFocusInRect:): New method implementing
	proper gstate support.
	(-lockFocus): Use it.
	(-unlockFocusNeedsFlush): New method.
	
Wed Jun 16 22:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Images/common_Home.tiff: new file for save panel
	* Images/common_Mount.tiff: new file for save panel
	* Images/common_Unmount.tiff: new file for save panel
	* Images/GNUmakefile: Install new files

Wed Jun 16 12:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSSavePanel.m: Rewrite by jagapen@whitewater.chem.wisc.edu
	* Headers/AppKit/NSSavePanel.h: ditto
	* Panels/SavePanel.gmodel: Update by jagapen@whitewater.chem.wisc.edu

Tue Jun 15 20:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSServicesManager.m: Use NSNotificationCenter properly.
	* Source/NSColor.m: Use NSNotificationCenter properly.
	* Source/NSInterfaceStyle.m: Use NSNotificationCenter properly.
	* Source/NSPasteboard.m: Use NSNotificationCenter properly.
	* Source/NSWorkspace.m: Use NSNotificationCenter properly.